--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </div>
             <div class="col-xs-6 col-sm-4 col-md-2">
 <div class="col-xs-12 col-sm-4 col-md-3">
-                <div class="phone"><i class="fa fa-phone"></i>+6285349945947</div>
+                <div class="phone"><i class="fa fa-whatsapp"></i>+6285349945947</div>
                 <div class="email"><i class="fa fa-envelope"></i>MhmdSairi@admin.io</div>
                 <div class="address">
                     <i class="fa fa-map-marker"></i> 
