--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li><a href="#"><i class="fa fa-wifi"></i></a></li>
                         <li><a href="#"><i class="fa fa-envelope"></i></a></li>
                         <li><a href="#"><i class="fa fa-share-alt"></i></a></li>
-                        <li><a href="#"><i class="fa fa-bullhorn"></i></a></li>
+                        <li><a href="#"><i class="fa fa-signal"></i></a></li>
                     </ul>
                     <canvas id="hand-animation"></canvas>
                 </div>
