--- a/dhosting.html
+++ b/dhosting.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-<title>Hostio</title>
+<title>CONFIG TELKOMSEL</title>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -14,14 +14,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <div class="page-title">Dedicated Hosting</div>
-                <div class="page-subtitle">Mauris at libero sed justo pretium maximus ac non ex. Donec sit amet ultrices dolo.</div>
+                <div class="page-title">CONFIG TELKOMSEL</div>
             </div>
         </div>
     </div>
 </div>
 <div id="sub-pricing" class="container-fluid">
-    <div class="hosting-icon purple-color"><i class="hsto hsto-technology"></i></div>
+    <div class="hosting-icon purple-color"><i class="fal fa-skull"></i></div>
     <div class="container purple-accent">
         <div class="row">
             <div class="col-sm-6 col-md-4">
