--- a/dhosting.html
+++ b/dhosting.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 <div id="sub-pricing" class="container-fluid">
-    <div class="hosting-icon purple-color"><i class="fal fa-skull"></i></div>
+    <div class="fad fa-quidditch"><i class="hsto hsto-technology"></i></div>
     <div class="container purple-accent">
         <div class="row">
             <div class="col-sm-6 col-md-4">
