--- a/dhosting.html
+++ b/dhosting.html
@@ -19,6 +19,10 @@
         </div>
     </div>
 </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-4">
+                <div class="pricing-box blue-after">
+                    <div class="pricing-icon"></div>
                     <div class="pricing-title">Warriors Plan</div>
                     <div class="pricing-amount">
                         <div class="price">
