--- a/dhosting.html
+++ b/dhosting.html
@@ -19,6 +19,7 @@
         </div>
     </div>
 </div>
+    <div class="container purple-accent">
         <div class="row">
             <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after">
