--- a/dhosting.html
+++ b/dhosting.html
@@ -19,6 +19,8 @@
         </div>
     </div>
 </div>
+    
+<div id="sub-pricing" class="container-fluid">
     <div class="container purple-accent">
         <div class="row">
             <div class="col-sm-6 col-md-4">
