--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
                 <div class="pricing-box purple-after">
                     <div class="pricing-icon purple-color"><i class="hsto hsto-computer"></i></div>
                     <div class="pricing-title">AXIS</div>
-                    <div class="pricing-button"><a href="dhosting.html" class="purple-button">Let's go!</a></div>
+                    <div class="pricing-button"><a href="axis.html" class="purple-button">Let's go!</a></div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
                 <div class="pricing-box purple-after">
                     <div class="pricing-icon purple-color"><i class="hsto hsto-computer"></i></div>
                     <div class="pricing-title">XL AXIATA</div>
-                    <div class="pricing-button"><a href="dhosting.html" class="purple-button">Let's go!</a></div>
+                    <div class="pricing-button"><a href="xl.html" class="purple-button">Let's go!</a></div>
                 </div>
             </div>
         </div>
