--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <a href="#" class="get-started-button">REQUEST CONFIG</a>
+                <a href="https://api.whatsapp.com/send?phone=6285349945947" class="get-started-button">REQUEST CONFIG</a>
             </div>
         </div>
     </div>
