--- a/telkomsel.html
+++ b/telkomsel.html
@@ -26,13 +26,9 @@
             <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">Warriors Plan</div>
+                    <div class="pricing-title">GamesMax</div>
                     <div class="pricing-amount">
                         <div class="price">
-                            <span class="currency">$</span>
-                            <span class="amount">3.8</span>
-                            <span class="duration">/mo</span>
-                        </div>
                     </div>
                     <div class="pricing-details">
                         <ul>
@@ -50,7 +46,7 @@
                             <li>Linux server</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="http://www.mediafire.com/file/eafmt2q29ry6ddu/Chat_FB%2526BM_V1.ktr/file" class="blue-button">I want this</a></div>
+                    <div class="pricing-button"><a href="https://download1324.mediafire.com/0zbagf0oneqg/9a3ow7t2elk67k4/GameMax.ehi" class="blue-button">I want this</a></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
