--- a/telkomsel.html
+++ b/telkomsel.html
@@ -32,18 +32,13 @@
                     </div>
                     <div class="pricing-details">
                         <ul>
-                            <li>Unlimited Storage</li>
-                            <li>500 Protected Files</li>
-                            <li>All Sharing Features</li>
-                            <li>Realtime Revoke</li>
-                            <li>Access to Party Integrations</li>
-                            <li>Free Native Apps</li>
-                            <li>QNote Editor</li>
-                            <li>Offline File Access</li>
-                            <li>Single Sign on</li>
-                            <li>Unlimited Email accounts</li>
-                            <li>Support 24/7</li>
-                            <li>Linux server</li>
+                            <li>SSH 30 DAYS</li>
+                            <li>Http Injector versi terbaru</li>
+                            <li>Suport root/no root</li>
+                            <li>Speed up 7MB</li>
+                            <li>Server singapore sshstores</li>
+                            <li>Fast Connect</li>
+                            <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
                     <div class="pricing-button"><a href="https://download1324.mediafire.com/0zbagf0oneqg/9a3ow7t2elk67k4/GameMax.ehi" class="blue-button">I want this</a></div>
