--- a/telkomsel.html
+++ b/telkomsel.html
@@ -3,12 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-<title>CONFIG TELKOMSEL</title>
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
 <body>
 <div id="top-content" class="container-fluid inner-page">
     <div class="container">
@@ -41,7 +36,7 @@
                             <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="https://download1324.mediafire.com/0zbagf0oneqg/9a3ow7t2elk67k4/GameMax.ehi" class="blue-button">I want this</a></div>
+                    <div class="pricing-button"><a href="https://download1324.mediafire.com/0zbagf0oneqg/9a3ow7t2elk67k4/GameMax.ehi" class="blue-button">Download</a></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
