--- a/telkomsel.html
+++ b/telkomsel.html
@@ -4,20 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
 </head>
+<tittle>CONFIG TELKOMSEL</tittle>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
-<div id="top-content" class="container-fluid inner-page">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <div class="page-title">CONFIG TELKOMSEL</div>
-            </div>
-        </div>
-    </div>
-</div>
-    
 <div id="sub-pricing" class="container-fluid">
     <div class="container purple-accent">
         <div class="row">
