--- a/telkomsel.html
+++ b/telkomsel.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-<tittle>CONFIG TELKOMSEL</tittle>
-</head>
+<title>CONFIG TELKOMSEL</title>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 <body>
 <div id="sub-pricing" class="container-fluid">
     <div class="container purple-accent">
