--- a/telkomsel.html
+++ b/telkomsel.html
@@ -36,31 +36,21 @@
             <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after best-seller">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">Gurus Plan</div>
+                    <div class="pricing-title">Ilmu Pedia</div>
                     <div class="pricing-amount">
-                        <div class="price">
-                            <span class="currency">$</span>
-                            <span class="amount">58.9</span>
-                            <span class="duration">/mo</span>
-                        </div>
                     </div>
                     <div class="pricing-details">
                         <ul>
-                            <li>Unlimited Storage</li>
-                            <li>500 Protected Files</li>
-                            <li>All Sharing Features</li>
-                            <li>Realtime Revoke</li>
-                            <li>Access to Party Integrations</li>
-                            <li>Free Native Apps</li>
-                            <li>QNote Editor</li>
-                            <li>Offline File Access</li>
-                            <li>Single Sign on</li>
-                            <li>Unlimited Email accounts</li>
-                            <li>Support 24/7</li>
-                            <li>Linux server</li>
+                            <li>SSH 30 DAYS</li>
+                            <li>Http Injector versi terbaru</li>
+                            <li>Suport root/no root</li>
+                            <li>Speed up 7MB</li>
+                            <li>Server 6 singapore sshstores</li>
+                            <li>Fast Connect</li>
+                            <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="#" class="blue-button">I am guru</a></div>
+                    <div class="pricing-button"><a href="https://download1518.mediafire.com/8gqeiv1ouwgg/ibqkoaglxpm4f2k/Ilmu+pedia.ehi" class="blue-button">Download</a></div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
