--- a/telkomsel.html
+++ b/telkomsel.html
@@ -34,10 +34,11 @@
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
-                <div class="pricing-box blue-after best-seller">
+                <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">Ilmu Pedia</div>
+                    <div class="pricing-title">GamesMax</div>
                     <div class="pricing-amount">
+                        <div class="price">
                     </div>
                     <div class="pricing-details">
                         <ul>
