--- a/telkomsel.html
+++ b/telkomsel.html
@@ -71,7 +71,7 @@
                             <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="https://download1479.mediafire.com/fpq3pixf78dg/70s6nociiu2vcl2/Maxstrem.ehi" class="green-button">Download</a></div>
+                    <div class="pricing-button"><a href="https://download1479.mediafire.com/fpq3pixf78dg/70s6nociiu2vcl2/Maxstrem.ehi" class="black-button">Download</a></div>
                 </div>
             </div>
         </div>
