--- a/telkomsel.html
+++ b/telkomsel.html
@@ -77,9 +77,11 @@
         </div>
     </div>
 </div>
+            <div class="col-md-12">
                 <div class="text">SIlahkan hubungi admin jika config error atau expired.</div>
                 <a href="https://api.whatsapp.com/send?phone=6285349945947" class="gstart">WhatsApp</a>
             </div>
+</div>
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
