--- a/telkomsel.html
+++ b/telkomsel.html
@@ -77,7 +77,10 @@
         </div>
     </div>
 </div>
-        <div class="row">
+
+
+
+<div id="get-started" class="container-fluid">
             <div class="col-md-12">
                 <div class="text">SIlahkan hubungi admin jika config error atau expired.</div>
                 <a href="https://api.whatsapp.com/send?phone=6285349945947" class="gstart">WhatsApp</a>
