--- a/telkomsel.html
+++ b/telkomsel.html
@@ -80,9 +80,26 @@
 
 
 
-<div class="pricing-title">Ilmu Pedia</div>
-                <a href="https://api.whatsapp.com/send?phone=6285349945947" class="gstart">WhatsApp</a>
-<script src="js/jquery.min.js"></script>
+<div class="col-sm-6 col-md-4">
+                <div class="pricing-box blue-after">
+                    <div class="pricing-icon"></div>
+                    <div class="pricing-title">Ilmu Pedia</div>
+                    <div class="pricing-amount">
+                        <div class="price">
+                    </div>
+                    <div class="pricing-details">
+                        <ul>
+                            <li>SSH 30 DAYS</li>
+                            <li>Http Injector versi terbaru</li>
+                            <li>Suport root/no root</li>
+                            <li>Speed up 7MB</li>
+                            <li>Server 6 singapore sshstores</li>
+                            <li>Fast Connect</li>
+                            <li>Dilarang membuka situs biru</li>
+                        </ul>
+                    </div>
+<div class="pricing-button"><a href="https://api.whatsapp.com/send?phone=6285349945947" class="blue-button">Download</a></div>
+               <script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
