--- a/telkomsel.html
+++ b/telkomsel.html
@@ -83,7 +83,7 @@
 <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">Ilmu Pedia</div>
+                    <div class="pricing-title">WhatsApp admin jika ada masalah dengan config</div>
                     <div class="pricing-amount">
                         <div class="price">
                     </div>
