--- a/telkomsel.html
+++ b/telkomsel.html
@@ -81,13 +81,13 @@
 
 
 <div class="col-sm-6 col-md-4">
-                <div class="pricing-box green-after">
+                <div class="pricing-box purple-after">
                     <div class="pricing-icon"></div>
                     <div class="pricing-title">WhatsApp admin jika ada masalah dengan config</div>
                     <div class="pricing-amount">
                         <div class="price">
                     </div>
-<div class="pricing-button"><a href="https://api.whatsapp.com/send?phone=6285349945947" class="green-button">Download</a></div>
+<div class="pricing-button"><a href="https://api.whatsapp.com/send?phone=6285349945947" class="purple-button">Download</a></div>
                <script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
