--- a/telkomsel.html
+++ b/telkomsel.html
@@ -87,8 +87,8 @@
                     <div class="pricing-amount">
                         <div class="price">
                     </div>
-<div class="pricing-button"><i class="fa fa-diamond fa-spin" style="font-size:100px;"></i>
-<a href="https://api.whatsapp.com/send?phone=6285349945947" class="blue-button">Download</a></div>
+<a href="https://api.whatsapp.com/send?phone=6285349945947" class="blue-button">
+<div class="pricing-button"><i class="fa fa-diamond fa-spin" style="font-size:100px;"></i>Download</a></div>
                <script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
