--- a/telkomsel.html
+++ b/telkomsel.html
@@ -79,7 +79,7 @@
     </div>
 </div>
 
-
+<i class="fa fa-diamond fa-spin" style="font-size:100px;"></i>
 
 <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after">
@@ -89,7 +89,7 @@
                         <div class="price">
                     </div>
 <a href="https://api.whatsapp.com/send?phone=6285349945947" class="blue-button">
-<div class="pricing-button"><i class="fa fa-diamond fa-spin" style="font-size:100px;"></i>Download</a></div>
+<div class="pricing-button">Download</a></div>
                <script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
