--- a/telkomsel.html
+++ b/telkomsel.html
@@ -89,7 +89,7 @@
                         <div class="price">
                     </div>
 <a href="https://api.whatsapp.com/send?phone=6285349945947" class="blue-button">
-<div class="pricing-button">Download</a></div>
+<div class="pricing-button">CHAT ADMIN</a></div>
                <script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
