--- a/telkomsel.html
+++ b/telkomsel.html
@@ -88,8 +88,7 @@
                     <div class="pricing-amount">
                         <div class="price">
                     </div>
-<a href="https://api.whatsapp.com/send?phone=6285349945947" class="blue-button">
-<div class="pricing-button">CHAT ADMIN</a></div>
+<div class="pricing-button"><a href="https://api.whatsapp.com/send?phone=6285349945947" class="blue-button">Download</a></div>
                <script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
