--- a/telkomsel.html
+++ b/telkomsel.html
@@ -84,11 +84,11 @@
 <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">WhatsApp admin jika ada masalah dengan config</div>
+                    <div class="pricing-title">Hubungi admin jika ada masalah dengan config</div>
                     <div class="pricing-amount">
                         <div class="price">
                     </div>
-<div class="pricing-button"><a href="https://api.whatsapp.com/send?phone=6285349945947" class="blue-button">Download</a></div>
+<div class="pricing-button"><a href="https://api.whatsapp.com/send?phone=6285349945947" class="blue-button">CHAT ADMIN</a></div>
                <script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
