--- a/telkomsel.html
+++ b/telkomsel.html
@@ -34,10 +34,13 @@
                     <div class="pricing-button"><a href="https://download1324.mediafire.com/0zbagf0oneqg/9a3ow7t2elk67k4/GameMax.ehi" class="blue-button">Download</a></div>
                 </div>
             </div>
+            <div id="sub-pricing" class="container-fluid">
+    <div class="container purple-accent">
+        <div class="row">
             <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">Ilmu Pedia</div>
+                    <div class="pricing-title">GamesMax</div>
                     <div class="pricing-amount">
                         <div class="price">
                     </div>
@@ -47,12 +50,12 @@
                             <li>Http Injector versi terbaru</li>
                             <li>Suport root/no root</li>
                             <li>Speed up 7MB</li>
-                            <li>Server 6 singapore sshstores</li>
+                            <li>Server singapore sshstores</li>
                             <li>Fast Connect</li>
                             <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="https://download1518.mediafire.com/8gqeiv1ouwgg/ibqkoaglxpm4f2k/Ilmu+pedia.ehi" class="blue-button">Download</a></div>
+                    <div class="pricing-button"><a href="https://download1324.mediafire.com/0zbagf0oneqg/9a3ow7t2elk67k4/GameMax.ehi" class="blue-button">Download</a></div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
