--- a/dhosting.html
+++ b/dhosting.html
@@ -20,28 +20,18 @@
             <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">Warriors Plan</div>
+                    <div class="pricing-title">GameMax</div>
                     <div class="pricing-amount">
-                        <div class="price">
-                            <span class="currency">$</span>
-                            <span class="amount">3.8</span>
-                            <span class="duration">/mo</span>
-                        </div>
                     </div>
                     <div class="pricing-details">
                         <ul>
-                            <li>Unlimited Storage</li>
-                            <li>500 Protected Files</li>
-                            <li>All Sharing Features</li>
-                            <li>Realtime Revoke</li>
-                            <li>Access to Party Integrations</li>
-                            <li class="not-supported">Free Native Apps</li>
-                            <li class="not-supported">QNote Editor</li>
-                            <li class="not-supported">Offline File Access</li>
-                            <li class="not-supported">Single Sign on</li>
-                            <li class="not-supported">Unlimited Email accounts</li>
-                            <li class="not-supported">Support 24/7</li>
-                            <li class="not-supported">Linux server</li>
+                            <li>SSH 30 DAYS</li>
+                            <li>Http Injector versi terbaru</li>
+                            <li>Suport root/no root</li>
+                            <li>Speed up 7MB</li>
+                            <li>Server singapore sshstores</li>
+                            <li>Fast Connect</li>
+                            <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
                     <div class="pricing-button"><a href="#" class="blue-button">I want this</a></div>
