--- a/dhosting.html
+++ b/dhosting.html
@@ -34,67 +34,47 @@
                             <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="#" class="blue-button">I want this</a></div>
+                    <div class="pricing-button"><a href="https://download1324.mediafire.com/0zbagf0oneqg/9a3ow7t2elk67k4/GameMax.ehi" class="blue-button">Download</a></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after best-seller">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">Gurus Plan</div>
+                    <div class="pricing-title">Maxstrem</div>
                     <div class="pricing-amount">
-                        <div class="price">
-                            <span class="currency">$</span>
-                            <span class="amount">58.9</span>
-                            <span class="duration">/mo</span>
-                        </div>
                     </div>
                     <div class="pricing-details">
                         <ul>
-                            <li>Unlimited Storage</li>
-                            <li>500 Protected Files</li>
-                            <li>All Sharing Features</li>
-                            <li>Realtime Revoke</li>
-                            <li>Access to Party Integrations</li>
-                            <li>Free Native Apps</li>
-                            <li>QNote Editor</li>
-                            <li>Offline File Access</li>
-                            <li class="not-supported">Single Sign on</li>
-                            <li class="not-supported">Unlimited Email accounts</li>
-                            <li class="not-supported">Support 24/7</li>
-                            <li class="not-supported">Linux server</li>
+                            <li>SSH 30 DAYS</li>
+                            <li>Http Injector versi terbaru</li>
+                            <li>Suport root/no root</li>
+                            <li>Speed up 7MB</li>
+                            <li>Server singapore sshstores</li>
+                            <li>Fast Connect</li>
+                            <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="#" class="blue-button">I am guru</a></div>
+                    <div class="pricing-button"><a href="https://download1479.mediafire.com/fpq3pixf78dg/70s6nociiu2vcl2/Maxstrem.ehi" class="blue-button">Download</a></div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
                 <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">Heros Plan</div>
+                    <div class="pricing-title">Ilmu Pedia</div>
                     <div class="pricing-amount">
-                        <div class="price">
-                            <span class="currency">$</span>
-                            <span class="amount">288.9</span>
-                            <span class="duration">/mo</span>
-                        </div>
                     </div>
                     <div class="pricing-details">
                         <ul>
-                            <li>Unlimited Storage</li>
-                            <li>500 Protected Files</li>
-                            <li>All Sharing Features</li>
-                            <li>Realtime Revoke</li>
-                            <li>Access to Party Integrations</li>
-                            <li>Free Native Apps</li>
-                            <li>QNote Editor</li>
-                            <li>Offline File Access</li>
-                            <li>Single Sign on</li>
-                            <li>Unlimited Email accounts</li>
-                            <li>Support 24/7</li>
-                            <li>Linux server</li>
+                            <li>SSH 30 DAYS</li>
+                            <li>Http Injector versi terbaru</li>
+                            <li>Suport root/no root</li>
+                            <li>Speed up 7MB</li>
+                            <li>Server singapore sshstores</li>
+                            <li>Fast Connect</li>
+                            <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="#" class="blue-button">Interested.</a></div>
+                    <div class="pricing-button"><a href="https://download1518.mediafire.com/8gqeiv1ouwgg/ibqkoaglxpm4f2k/Ilmu+pedia.ehi" class="blue-button">Download</a></div>
                 </div>
             </div>
         </div>
