--- a/dhosting.html
+++ b/dhosting.html
@@ -80,6 +80,16 @@
         </div>
     </div>
 </div>
+<div id="get-started" class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="text">Get started now. Try Hostio Free for 10 days.</div>
+                <a href="#" class="gstart">Get Started</a>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
