--- a/dhosting.html
+++ b/dhosting.html
@@ -84,8 +84,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="text">Get started now. Try Hostio Free for 10 days.</div>
-                <a href="#" class="gstart">Get Started</a>
+                <div class="pricing-title">HUBUNGI ADMIN JIKA ADA MASALAH</div>
+                <a href="https://api.whatsapp.com/send?phone=6285349945947" class="gstart">WhatsApp</a>
             </div>
         </div>
     </div>
