--- a/dhosting.html
+++ b/dhosting.html
@@ -84,7 +84,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="pricing-title">HUBUNGI ADMIN JIKA ADA MASALAH</div>
+                <div class="text">HUBUNGI ADMIN JIKA ADA MASALAH</div>
                 <a href="https://api.whatsapp.com/send?phone=6285349945947" class="gstart">WhatsApp</a>
             </div>
         </div>
