--- a/dhosting.html
+++ b/dhosting.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
-                <div class="pricing-box blue-after best-seller">
+                <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
                     <div class="pricing-title">Maxstrem</div>
                     <div class="pricing-amount">
