--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="col-sm-12 col-md-4">
                 <div class="pricing-box purple-after">
-                    <div class="pricing-icon purple-color"><i class="hsto hsto-computer"></i></div>
+                    <div class="pricing-icon blue-color"><i class="hsto hsto-computer"></i></div>
                     <div class="pricing-title">Telkomsel</div>
                     <div class="pricing-button"><a href="dhosting.html" class="purple-button">Let's go!</a></div>
                 </div>
