--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="pricing-box purple-after">
                     <div class="pricing-icon blue-color"><i class="hsto hsto-computer"></i></div>
                     <div class="pricing-title">XL AXIATA</div>
-                    <div class="pricing-button"><a href="xl.html" class="blue-button">Select Config!</a></div>
+                    <div class="pricing-button"><a href="xl.html" class="blue-button">Select Config</a></div>
                 </div>
             </div>
         </div>
