--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
         </div>
     </div>
 </div>
+ 
+<div id="testimonials" class="container-fluid">
+    <div class="container">
  <div class="row">
             <div class="col-sm-6 col-md-4">
                 <div class="testimonial-box">
