--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li><a href="#"><i class="fa fa-share-alt"></i></a></li>
                         <li><a href="#"><i class="fa fa-signal"></i></a></li>
                     </ul>
-                    <canvas id="wifi-animation"></canvas>
+                    <canvas id="hand-animation"></canvas>
                 </div>
             </div>
         </div>
