--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="pricing-box purple-after">
                     <div class="pricing-icon blue-color"><i class="hsto hsto-computer"></i></div>
                     <div class="pricing-title">Telkomsel</div>
-                    <div class="pricing-button"><a href="telkomsel.html" class="blue-button">Select Config</a></div>
+                    <div class="pricing-button"><a href="telkomsel" class="blue-button">Select Config</a></div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
