--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="pricing-box purple-after">
                     <div class="pricing-icon blue-color"><i class="hsto hsto-computer"></i></div>
                     <div class="pricing-title">AXIS</div>
-                    <div class="pricing-button"><a href="javascript:void(0)" onclick="location.href='http://www.google.com'">Hide Link</a></div>
+                    <div class="pricing-button"><a href="javascript:void(0)" onclick="location.href='axis.html' class="blue-button"">Hide Link</a></div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
