--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="col-sm-12 col-md-4">
                 <div class="pricing-box purple-after">
                     <div class="pricing-icon blue-color"><i class="hsto hsto-computer"></i></div>
-                    <div class="pricing-title">Telkomsel</div>
+                    <div class="pricing-title">TELKOMSEL</div>
                     <div class="pricing-button"><a href="telkomsel.html" class="blue-button">Select Config</a></div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                 <div class="pricing-box purple-after">
                     <div class="pricing-icon blue-color"><i class="hsto hsto-computer"></i></div>
                     <div class="pricing-title">AXIS</div>
-                    <div class="pricing-button"><a href="javascript:void(0)" onclick="location.href='axis.html' class="blue-button"">Hide Link</a></div>
+                    <div class="pricing-button"><a href="axis.html" class="blue-button">Select Config</a></div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
