--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
                     <div class="pricing-button"><a href="xl.html" class="blue-button">Select Config</a></div>
                 </div>
             </div>
+<div class="row">
+            <div class="col-md-12">
+                <a href="https://api.whatsapp.com/send?phone=6285349945947" class="get-started-button">REQUEST CONFIG</a>
+            </div>
+        </div>
         </div>
     </div>
 </div>
