--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                 </div>
             </div>
 <div class="row">
-            <div class="pricing-button"><a href="telkomsel.html" class="blue-button">Select Config</a></div>
-                </div>
+            <br><div class="pricing-button"><a href="telkomsel.html" class="blue-button">Select Config</a></div>
+                </div></br>
         </div>
     </div>
 </div>
