--- a/index.html
+++ b/index.html
@@ -100,9 +100,13 @@
                     <div class="pricing-button"><a href="xl.html" class="blue-button">Select Config</a></div>
                 </div>
             </div>
-<div class="row">
-            <br><div class="pricing-button"><a href="telkomsel.html" class="blue-button">Select Config</a></div>
-                </div></br>
+<div class="col-sm-12 col-md-4">
+                <div class="pricing-box purple-after">
+                    <div class="pricing-icon blue-color"><i class="hsto hsto-computer"></i></div>
+                    <div class="pricing-title">TUTORIAL</div>
+                    <div class="pricing-button"><a href="tutorial.html" class="blue-button">Select Config</a></div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -114,10 +118,6 @@
                 <div class="row-subtitle">Untuk updatean trik terbaru admin akan mencoba selalu update trik terbaru.</div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <a href="https://api.whatsapp.com/send?phone=6285349945947" class="get-started-button">REQUEST CONFIG</a>
-            </div>
         </div>
     </div>
 </div>
