--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             <div class="col-md-12">
                 <div class="row-title">Info updatean Config atau Trik </div>
                 <div class="row-subtitle">Untuk updatean trik terbaru admin akan mencoba selalu update trik terbaru.</div>
+             <div class="pricing-button"><a href="tutorial.html" class="blue-button">Select Config</a></div>
             </div>
         </div>
         </div>
