--- a/index.html
+++ b/index.html
@@ -100,13 +100,6 @@
                     <div class="pricing-button"><a href="xl.html" class="blue-button">Select Config</a></div>
                 </div>
             </div>
-<div class="col-sm-12 col-md-4">
-                <div class="pricing-box purple-after">
-                    <div class="pricing-icon blue-color"><i class="hsto hsto-computer"></i></div>
-                    <div class="pricing-title">TUTORIAL</div>
-                    <div class="pricing-button"><a href="tutorial.html" class="blue-button">Select Config</a></div>
-                </div>
-            </div>
         </div>
     </div>
 </div>
@@ -114,8 +107,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="row-title">Info updatean Config atau Trik </div>
-                <div class="row-subtitle">Untuk updatean trik terbaru admin akan mencoba selalu update trik terbaru.</div>
+                <div class="row-title">TUTORIAL INJECTION VPN</div>
              <div class="pricing-button"><a href="tutorial.html" class="blue-button">Select Config</a></div>
             </div>
         </div>
