--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="row-title">TUTORIAL INJECTION VPN</div>
-             <div class="pricing-button"><a href="tutorial.html" class="blue-button">Select Config</a></div>
+             <div class="pricing-button"><a href="tutorial.html" class="blue-button">Select</a></div>
             </div>
         </div>
         </div>
