--- a/tutorial.html
+++ b/tutorial.html
@@ -10,26 +10,15 @@
 </head>
 
 <body>
-<div id="top-content" class="container-fluid inner-page">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <div class="page-title">Help & Support</div>
-                <div class="page-subtitle">Getting started with Hostio takes just a few minutes once you’ve <a href="register.html">signed up</a> for an account.</div>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="details" class="container-fluid">
+    <div id="details" class="container-fluid">
     <div class="container">
         <div class="row">
             <div class="col-md-7">
-                <div class="col-title-blue">Get the right support..</div>
                 <div class="help-image-holder"><img class="help" src="./images/help.png" alt="help" /></div>
             </div>
             <div class="col-md-5">
-                <div class="col-title">Documentation</div>
-                <div class="support-box green-support-box">
+                <div class="col-title">APP INJECTION VPN...</div>
+                <div class="support-box grey-support-box">
                     <div class="support-box-title"><i class="fa fa-link" aria-hidden="true"></i><a href="#">Community Support</a></div>
                     <div class="support-box-details">
                         Aenean accumsan aliquam justo, et rhoncus est ullamcorper at.
