--- a/tutorial.html
+++ b/tutorial.html
@@ -19,10 +19,7 @@
             <div class="col-md-5">
                 <div class="col-title">APP INJECTION VPN...</div>
                 <div class="support-box grey-support-box">
-                    <div class="support-box-title"><i class="fa fa-link" aria-hidden="true"></i><a href="#">Community Support</a></div>
-                    <div class="support-box-details">
-                        Aenean accumsan aliquam justo, et rhoncus est ullamcorper at.
-                    </div>
+                    <div class="support-box-title"><i class="fa fa-space-shuttle" aria-hidden="true"></i><a href="https://play.google.com/store/apps/developer?id=KPN+Software+Developers+%28KPN+Family%29">KPN Software Developers</a></div>
                 </div>
                 <div class="support-box yellow-support-box">
                     <div class="support-box-title"><i class="fa fa-link" aria-hidden="true"></i><a href="#">Email Support</a></div>
