--- a/tutorial.html
+++ b/tutorial.html
@@ -19,20 +19,13 @@
             <div class="col-md-5">
                 <div class="col-title">APP INJECTION VPN...</div>
                 <div class="support-box grey-support-box">
-                    <div class="support-box-title"><i class="fa fa-shield-alt" aria-hidden="true"></i><a href="https://play.google.com/store/apps/developer?id=KPN+Software+Developers+%28KPN+Family%29">KPN Software Developers</a></div>
+                    <div class="support-box-title"><i class="fa fa-link" aria-hidden="true"></i><a href="https://play.google.com/store/apps/developer?id=KPN+Software+Developers+%28KPN+Family%29">KPN Software Developers</a></div>
                 </div>
-                <div class="support-box yellow-support-box">
-                    <div class="support-box-title"><i class="fa fa-link" aria-hidden="true"></i><a href="#">Email Support</a></div>
-                    <div class="support-box-details">
-                        Suspendisse eget accumsan massa, venenatis fermentum dui.
-
-                    </div>
+                <div class="support-box blue-support-box">
+                    <div class="support-box-title"><i class="fa fa-link" aria-hidden="true"></i><a href="https://play.google.com/store/apps/collection/cluster?clp=igM4ChkKEzQ4NTMyMzk1MDYyOTA0ODE3ODMQCBgDEhkKEzQ4NTMyMzk1MDYyOTA0ODE3ODMQCBgDGAA%3D:S:ANO1ljJRR30&gsr=CjuKAzgKGQoTNDg1MzIzOTUwNjI5MDQ4MTc4MxAIGAMSGQoTNDg1MzIzOTUwNjI5MDQ4MTc4MxAIGAMYAA%3D%3D:S:ANO1ljKvbw8">Http Injector</a></div>
                 </div>
-                <div class="support-box purple-support-box">
-                    <div class="support-box-title"><i class="fa fa-link" aria-hidden="true"></i><a href="#">Domain Names</a></div>
-                    <div class="support-box-details">
-                        Morbi libero tortor, interdum fermentum justo et, mollis interdum justo. Morbi a accumsan urna.
-                    </div>
+                <div class="support-box black-support-box">
+                    <div class="support-box-title"><i class="fa fa-link" aria-hidden="true"></i><a href="https://play.google.com/store/apps/developer?id=John+Vincent+Diazhttps://play.google.com/store/apps/developer?id=John+Vincent+Diaz">Quantum Tunnel</a></div>
                 </div>
             </div>
         </div>
