--- a/tutorial.html
+++ b/tutorial.html
@@ -31,38 +31,13 @@
         </div>
         <div class="row">
             <div class="col-md-7 col-padding-top">
-                <div class="col-title">Frequently Asked Questions</div>
                 <div id="faq-questions">
                     <div class="faq-question-holder active">
                         <div class="faq-question">
-                            What is Web Hosting?
+                            Cara menggunakan aplikasi !!!
                         </div>
                         <div class="faq-answer">
-                            At vero eos et accusamus et iusto odio dignissimos  ducimus qui blanditiis praesentium voluptatum deleniti llitia animi,  At vero eos et accusamus et Main iusto odio dignissimos.
-                        </div>
-                    </div>
-                    <div class="faq-question-holder">
-                        <div class="faq-question">
-                            What makes Hostio standout from other hosting providers?
-                        </div>
-                        <div class="faq-answer">
-                            At vero eos et accusamus et iusto odio dignissimos  ducimus qui blanditiis praesentium voluptatum deleniti llitia animi,  At vero eos et accusamus et Main iusto odio dignissimos.
-                        </div>
-                    </div>
-                    <div class="faq-question-holder">
-                        <div class="faq-question">
-                            What type of Hosting do I need?
-                        </div>
-                        <div class="faq-answer">
-                            At vero eos et accusamus et iusto odio dignissimos  ducimus qui blanditiis praesentium voluptatum deleniti llitia animi,  At vero eos et accusamus et Main iusto odio dignissimos.
-                        </div>
-                    </div>
-                    <div class="faq-question-holder">
-                        <div class="faq-question">
-                            How can you help me and how can I reach your support?
-                        </div>
-                        <div class="faq-answer">
-                            At vero eos et accusamus et iusto odio dignissimos  ducimus qui blanditiis praesentium voluptatum deleniti llitia animi,  At vero eos et accusamus et Main iusto odio dignissimos.
+                            Pertama kalian download yang tersedia di panelconfig . Selanjutnya buka apikasi HTTP INJECTOR (tergantung aplikasi) Terus kalian tekan icon pojok kanan disebelah titik tiga lalu kalian klik dan pilih Import Config dan cari file yang sudah kalian download dan kalo sudah dapat kalian klik dan nyalakan data internet dan hubungkan apikasi dengan mengklik "Mulai" Kalo sudah konek akan ada icon kunci di bar status dan selamat berinternet bebas :) 
                         </div>
                     </div>
                 </div>
