--- a/tutorial.html
+++ b/tutorial.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-<title>Hostio</title>
+<title>TUTORIAL</title>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -42,93 +42,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5 col-padding-top">
-                <div class="col-title">Useful Links</div>
-                <a href="#"><h4>Website issue</h4></a>
-                <p>At vero eos et accusamus et iusto odio dignissimos  ducimus qui blanditiis. praesentium voluptatum deleniti llitia animi, At vero eos et accusamus et Main iusto odio dignissimos.</p>
-                
-                <a href="#"><h4>Website issue</h4></a>
-                <p>At vero eos et accusamus et iusto odio dignissimos  ducimus qui blanditiis. praesentium voluptatum deleniti llitia animi, At vero eos et accusamus et Main iusto odio dignissimos.</p>
-                
-                <a href="#"><h4>Website issue</h4></a>
-                <p>At vero eos et accusamus et iusto odio dignissimos  ducimus qui blanditiis. praesentium voluptatum deleniti llitia animi, At vero eos et accusamus et Main iusto odio dignissimos.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="search-text" class="container-fluid">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="text-search-holder">
-                    <form id="text-search">
-                        <input type="text" name="search" placeholder="How can we help you today?" />
-                        <input type="submit" name="submit" value="Find out" />
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="footer" class="container-fluid">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-4 col-md-1">
-                <img class="logo-mini" src="images/logo-mini.png" alt="Hostio" />
-            </div>
-            <div class="col-xs-6 col-sm-4 col-md-2">
-                <h4>Company</h4>
-                <ul class="footer-menu">
-                    <li><a href="about.html">About us</a></li>
-                    <li><a href="news.html">News</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
-                </ul>
-            </div>
-            <div class="col-xs-6 col-sm-4 col-md-2">
-                <h4>Policy</h4>
-                <ul class="footer-menu">
-                    <li><a href="terms.html">Terms and Conditions</a></li>
-                    <li><a href="policy.html">Copyright Policy</a></li>
-                </ul>
-            </div>
-            <div class="col-xs-6 col-sm-4 col-md-2">
-                <h4>Services</h4>
-                <ul class="footer-menu">
-                    <li><a href="whosting.html">Web Hosting</a></li>
-                    <li><a href="chosting.html">Cloud Hosting</a></li>
-                    <li><a href="dhosting.html">Dedicated Hosting</a></li>
-                    <li><a href="domain.html">Domain Names</a></li>
-                </ul>
-            </div>
-            <div class="col-xs-6 col-sm-4 col-md-2">
-                <h4>Other links</h4>
-                <ul class="footer-menu">
-                    <li><a href="transfer.html">Transfer domains</a></li>
-                    <li><a href="portal.html">Customer Portal</a></li>
-                    <li class="active"><a href="support.html">Support Portal</a></li>
-                    <li><a href="tutorials.html">Video Tutorials</a></li>
-                </ul>
-            </div>
-            <div class="col-xs-12 col-sm-4 col-md-3">
-                <div class="phone"><i class="fa fa-phone"></i> 00 285 900 38502</div>
-                <div class="email"><i class="fa fa-envelope"></i> hello@hostio.io</div>
-                <div class="address">
-                    <i class="fa fa-map-marker"></i> 
-                    <div>Brizbin, Australia<br>
-                        Road 398, Center<br>
-                        Office 38, floor 3</div>
-                </div>
-                <div class="social">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<script src="js/jquery.min.js"></script>
+            <script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
