--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
- <link rel="shortcut icon" href="images/laptop.png"/>
+ <link rel="shortcut icon" href="images/favicon.png"/>
 </head>
  
 <body>
