--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <div class="animation">
                     <img src="images/laptop.png" alt="laptop" />
                     <ul class="icons-list">
-                        <li><a href="#"><i class="fa fa-thumbs-up"></i></a></li>
-                        <li><a href="#"><i class="fa fa-commenting"></i></a></li>
-                        <li><a href="#"><i class="fa fa-wifi"></i></a></li>
+                        <li><a href="https://m.facebook.com/ironimouse"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
+                        <li><a href="#"><i class="fa fa-blogger"></i></a></li>
                         <li><a href="#"><i class="fa fa-envelope"></i></a></li>
                         <li><a href="#"><i class="fa fa-share-alt"></i></a></li>
                         <li><a href="#"><i class="fa fa-signal"></i></a></li>
