--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <ul class="icons-list">
                         <li><a href="https://m.facebook.com/ironimouse"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-                        <li><a href="#"><i class="fa fa-blogger"></i></a></li>
+                        <li><a href="#"><i class="fa fa-gmail"></i></a></li>
                         <li><a href="#"><i class="fa fa-envelope"></i></a></li>
                         <li><a href="#"><i class="fa fa-share-alt"></i></a></li>
                         <li><a href="#"><i class="fa fa-signal"></i></a></li>
